--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.accio{
+	width : 150 px ;
+	height : 150 px ;
+	bgcolor : #000000 ;
+}
+
+.hello-accio{
+	color : #ffffff;
+	margin-left : 32px ;
+	padding : 10 px ;
+}
