--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,11 @@
 /* Your CSS Code here. */
 .accio{
 	width-height : 150 px ;
-/* 	height : 150 px ; */
 	background-color : #000000 ;
 }
 
 .hello-accio{
 	color : #ffffff;
 	margin-left : 32px ;
-	padding : 10 px;
+	padding : 10 px 10px;
 }
