--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 
 /* Your CSS Code here. */
 .accio{
-	width : 150px ;
-	height : 150px ;
-	background-color : #000000 ;
+	width-height : 150px;
+/* 	height : 150px; */
+	background-color : black;
 }
 
 .hello-accio{
-	color : #ffffff;
-	margin-left : 32px ;
+	color : white;
+	margin-left : 32px;
 	padding : 10px;
 }
