--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 .accio{
 	width-height : 150px;
 /* 	height : 150px; */
-	background-color : black;
+	background-color : #000000;
 }
 
 .hello-accio{
-	color : white;
+	color : #ffffff;
 	margin-left : 32px;
-	padding : 10px;
+	padding : 10px 10px;
 }
